// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`builder/fromColumnMap should properly deal with missing values 1`] = `
Object {
  "children": Object {
    "x": Object {
      "values": Array [
        Array [
          1,
        ],
        Array [
          2,
        ],
      ],
    },
    "y": Object {
      "values": Array [
        Array [
          0,
        ],
        Array [
          2,
        ],
      ],
    },
  },
}
`;

exports[`builder/fromColumnMap should properly deal with nested objects 1`] = `
Object {
  "children": Object {
    "data": Object {
      "children": Object {
        "reason": Object {
          "values": Array [
            Array [
              1,
            ],
            Array [
              "because",
            ],
          ],
        },
        "timestamp": Object {
          "values": Array [
            Array [
              0,
            ],
            Array [
              1,
            ],
          ],
        },
      },
    },
    "type": Object {
      "values": Array [
        Array [
          0,
          1,
        ],
        Array [
          "start",
          "stop",
        ],
      ],
    },
  },
}
`;

exports[`builder/fromColumnMap should properly deal with weird javascript crap 1`] = `
Object {
  "children": Object {
    "0": Object {
      "values": Array [
        Array [
          1,
        ],
        Array [
          1,
        ],
      ],
    },
    "1": Object {
      "values": Array [
        Array [
          1,
        ],
        Array [
          0,
        ],
      ],
    },
    "a": Object {
      "values": Array [
        Array [
          0,
        ],
        Array [
          1,
        ],
      ],
    },
    "b": Object {
      "values": Array [
        Array [
          0,
        ],
        Array [
          NaN,
        ],
      ],
    },
    "c": Object {
      "values": Array [
        Array [
          0,
        ],
        Array [
          Infinity,
        ],
      ],
    },
    "d": Object {
      "values": Array [
        Array [
          0,
        ],
        Array [
          -Infinity,
        ],
      ],
    },
    "false": Object {
      "values": Array [
        Array [
          1,
        ],
        Array [
          0,
        ],
      ],
    },
    "null": Object {
      "values": Array [
        Array [
          1,
        ],
        Array [
          1,
        ],
      ],
    },
    "true": Object {
      "values": Array [
        Array [
          1,
        ],
        Array [
          1,
        ],
      ],
    },
    "undefined": Object {
      "values": Array [
        Array [
          1,
        ],
        Array [
          false,
        ],
      ],
    },
    "w": Object {
      "values": Array [
        Array [
          0,
        ],
        Array [
          false,
        ],
      ],
    },
    "x": Object {
      "values": Array [
        Array [
          0,
        ],
        Array [
          undefined,
        ],
      ],
    },
    "y": Object {
      "values": Array [
        Array [
          0,
        ],
        Array [
          null,
        ],
      ],
    },
    "z": Object {
      "values": Array [
        Array [
          0,
        ],
        Array [
          true,
        ],
      ],
    },
  },
}
`;

exports[`builder/fromColumnMap should work for normal time series data 1`] = `
Object {
  "children": Object {
    "x": Object {
      "values": Array [
        Array [
          0,
          1,
        ],
        Array [
          1,
          2,
        ],
      ],
    },
    "y": Object {
      "values": Array [
        Array [
          0,
          1,
        ],
        Array [
          2,
          1,
        ],
      ],
    },
  },
}
`;

exports[`toColumnMap/fromColumnMap should properly deal with missing values 1`] = `
Object {
  "children": Object {
    "x": Object {
      "values": Array [
        Array [
          1,
        ],
        Array [
          2,
        ],
      ],
    },
    "y": Object {
      "values": Array [
        Array [
          0,
        ],
        Array [
          2,
        ],
      ],
    },
  },
}
`;

exports[`toColumnMap/fromColumnMap should properly deal with nested objects 1`] = `
Object {
  "children": Object {
    "data": Object {
      "children": Object {
        "reason": Object {
          "values": Array [
            Array [
              1,
            ],
            Array [
              "because",
            ],
          ],
        },
        "timestamp": Object {
          "values": Array [
            Array [
              0,
            ],
            Array [
              1,
            ],
          ],
        },
      },
    },
    "type": Object {
      "values": Array [
        Array [
          0,
          1,
        ],
        Array [
          "start",
          "stop",
        ],
      ],
    },
  },
}
`;

exports[`toColumnMap/fromColumnMap should properly deal with weird javascript crap 1`] = `
Object {
  "children": Object {
    "0": Object {
      "values": Array [
        Array [
          1,
        ],
        Array [
          1,
        ],
      ],
    },
    "1": Object {
      "values": Array [
        Array [
          1,
        ],
        Array [
          0,
        ],
      ],
    },
    "a": Object {
      "values": Array [
        Array [
          0,
        ],
        Array [
          1,
        ],
      ],
    },
    "b": Object {
      "values": Array [
        Array [
          0,
        ],
        Array [
          NaN,
        ],
      ],
    },
    "c": Object {
      "values": Array [
        Array [
          0,
        ],
        Array [
          Infinity,
        ],
      ],
    },
    "d": Object {
      "values": Array [
        Array [
          0,
        ],
        Array [
          -Infinity,
        ],
      ],
    },
    "false": Object {
      "values": Array [
        Array [
          1,
        ],
        Array [
          0,
        ],
      ],
    },
    "null": Object {
      "values": Array [
        Array [
          1,
        ],
        Array [
          1,
        ],
      ],
    },
    "true": Object {
      "values": Array [
        Array [
          1,
        ],
        Array [
          1,
        ],
      ],
    },
    "undefined": Object {
      "values": Array [
        Array [
          1,
        ],
        Array [
          false,
        ],
      ],
    },
    "w": Object {
      "values": Array [
        Array [
          0,
        ],
        Array [
          false,
        ],
      ],
    },
    "x": Object {
      "values": Array [
        Array [
          0,
        ],
        Array [
          undefined,
        ],
      ],
    },
    "y": Object {
      "values": Array [
        Array [
          0,
        ],
        Array [
          null,
        ],
      ],
    },
    "z": Object {
      "values": Array [
        Array [
          0,
        ],
        Array [
          true,
        ],
      ],
    },
  },
}
`;

exports[`toColumnMap/fromColumnMap should work for normal time series data 1`] = `
Object {
  "children": Object {
    "x": Object {
      "values": Array [
        Array [
          0,
          1,
        ],
        Array [
          1,
          2,
        ],
      ],
    },
    "y": Object {
      "values": Array [
        Array [
          0,
          1,
        ],
        Array [
          2,
          1,
        ],
      ],
    },
  },
}
`;

exports[`toColumnMap/iterable should properly deal with missing values 1`] = `
Object {
  "children": Object {
    "x": Object {
      "values": Array [
        Array [
          1,
        ],
        Array [
          2,
        ],
      ],
    },
    "y": Object {
      "values": Array [
        Array [
          0,
        ],
        Array [
          2,
        ],
      ],
    },
  },
}
`;

exports[`toColumnMap/iterable should properly deal with nested objects 1`] = `
Object {
  "children": Object {
    "data": Object {
      "children": Object {
        "reason": Object {
          "values": Array [
            Array [
              1,
            ],
            Array [
              "because",
            ],
          ],
        },
        "timestamp": Object {
          "values": Array [
            Array [
              0,
            ],
            Array [
              1,
            ],
          ],
        },
      },
    },
    "type": Object {
      "values": Array [
        Array [
          0,
          1,
        ],
        Array [
          "start",
          "stop",
        ],
      ],
    },
  },
}
`;

exports[`toColumnMap/iterable should properly deal with weird javascript crap 1`] = `
Object {
  "children": Object {
    "0": Object {
      "values": Array [
        Array [
          1,
        ],
        Array [
          1,
        ],
      ],
    },
    "1": Object {
      "values": Array [
        Array [
          1,
        ],
        Array [
          0,
        ],
      ],
    },
    "a": Object {
      "values": Array [
        Array [
          0,
        ],
        Array [
          1,
        ],
      ],
    },
    "b": Object {
      "values": Array [
        Array [
          0,
        ],
        Array [
          NaN,
        ],
      ],
    },
    "c": Object {
      "values": Array [
        Array [
          0,
        ],
        Array [
          Infinity,
        ],
      ],
    },
    "d": Object {
      "values": Array [
        Array [
          0,
        ],
        Array [
          -Infinity,
        ],
      ],
    },
    "false": Object {
      "values": Array [
        Array [
          1,
        ],
        Array [
          0,
        ],
      ],
    },
    "null": Object {
      "values": Array [
        Array [
          1,
        ],
        Array [
          1,
        ],
      ],
    },
    "true": Object {
      "values": Array [
        Array [
          1,
        ],
        Array [
          1,
        ],
      ],
    },
    "undefined": Object {
      "values": Array [
        Array [
          1,
        ],
        Array [
          false,
        ],
      ],
    },
    "w": Object {
      "values": Array [
        Array [
          0,
        ],
        Array [
          false,
        ],
      ],
    },
    "x": Object {
      "values": Array [
        Array [
          0,
        ],
        Array [
          undefined,
        ],
      ],
    },
    "y": Object {
      "values": Array [
        Array [
          0,
        ],
        Array [
          null,
        ],
      ],
    },
    "z": Object {
      "values": Array [
        Array [
          0,
        ],
        Array [
          true,
        ],
      ],
    },
  },
}
`;

exports[`toColumnMap/iterable should work for normal time series data 1`] = `
Object {
  "children": Object {
    "x": Object {
      "values": Array [
        Array [
          0,
          1,
        ],
        Array [
          1,
          2,
        ],
      ],
    },
    "y": Object {
      "values": Array [
        Array [
          0,
          1,
        ],
        Array [
          2,
          1,
        ],
      ],
    },
  },
}
`;
